# NLP-Topic-Modeling

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
docs/: Makefile  Readme.txt
docs/presentation/: .gitignore  presentation.tex
docs/report/: .gitignore  report.tex
notebooks/: 01-data-exploration.ipynb  02-feature-demo.ipynb  Experiments.ipynb  README.md  dataset.py
src/nlp_topic_modeling/: __init__.py  lda.py
src/nlp_topic_modeling/core/: __init__.py  logging.py
src/nlp_topic_modeling/data/: loaders.py
src/nlp_topic_modeling/lda/: __init__.py  config.py  model.py  pipeline.py  utils.py  vectorizer.py
src/nlp_topic_modeling/preprocessing/: __init__.py  normalizers.py  pipeline.py  stopwords.py  tokenizer.py
tests/: test_data.py  test_lda.py  test_preprocessing.py
