[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-topic-modeling"
version = "0.1.0"
description = "Topic modeling utilities (LDA/BERTopic) for MOROCO."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "artifici-lda @ git+https://github.com/ArtificiAI/Multilingual-Latent-Dirichlet-Allocation-LDA.git",
    "bertopic",
    "datasets<4.0.0",
    "matplotlib>=3.8.2",
    "nltk>=3.9.2",
    "numpy>=1.26.3",
    "pandas",
    "pyldavis",
    "scipy>=1.12.0",
    "seaborn>=0.13.2",
    "sentencepiece",
    "snowballstemmer",
    "torch",
    "tqdm>=4.67.1",
    "transformers",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
