[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-topic-modeling"
version = "0.1.0"
description = "Topic modeling utilities (LDA/BERTopic) for MOROCO."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "artifici-lda @ git+https://github.com/ArtificiAI/Multilingual-Latent-Dirichlet-Allocation-LDA.git",
    "bertopic",
    "datasets<4.0.0",
    "matplotlib>=3.8.2",
    "nltk>=3.9.2",
    "numpy>=1.26.3",
    "pandas",
    "pyldavis",
    "scipy>=1.12.0",
    "seaborn>=0.13.2",
    "sentencepiece",
    "snowballstemmer",
    "spacy>=3.7.0",
    "stop-words>=2025.11.4",
    "stopwordsiso>=0.6.1",
    "torch",
    "tqdm>=4.67.1",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
ro = [
    "spacy[lookups]",  # Romanian lemma lookup tables
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
